tests/NormalTests/paczka1/small_fuzzy/22121851.err
Error in line 10: A57 S471 48,8
Error in line 15: A57 A275 18,6
